<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="Home"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/colorWhite" />

    <ScrollView
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <EditText
        android:id="@+id/et_search_well"
        style="@style/CustomEditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_search_well"
        android:inputType="textEmailAddress" />


        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="20dp"
            android:id="@+id/widget_well_uwi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_well_uwi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_uwi" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/widget_well_short_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_well_short_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_short_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/widget_well_release_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_well_release_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_release_name" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/widget_well_lat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_well_lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/well_lat" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/widget_well_long"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_well_long"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/well_long" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/widget_current_lat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_current_lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_lat" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/widget_current_long"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_current_long"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_long" />

        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/btn_search_well"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_bg_fill"
            android:elevation="5dp"
            android:text="@string/btn_search"
            android:textColor="#ffff"
            android:textSize="@dimen/editTextSize" />

    </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"/>

</RelativeLayout>