<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:layout_marginTop="24dp"
        android:id="@+id/layout_logo"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_alignParentLeft="true"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ongc"/>

        <ImageView
            android:layout_alignParentRight="true"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ongcc"/>


    </RelativeLayout>


    <LinearLayout
        android:layout_below="@id/layout_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SignIn"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />


        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_marginBottom="30dp"
            android:background="@color/colorPrimary" />


        <EditText
            android:id="@+id/et_user_name"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_user_name"

            android:inputType="textEmailAddress|textCapSentences" />


        <EditText
            android:id="@+id/et_user_password"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password"
            android:inputType="textPassword|textCapSentences"
            android:maxLength="10" />


        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_bg_fill"
            android:elevation="5dp"
            android:text="@string/btn_sign_in"
            android:textColor="#ffff"
            android:textSize="@dimen/editTextSize" />

    </LinearLayout>



</RelativeLayout>